# meuprojfastapi

./: README.md  pyproject.toml
migrations/: env.py
migrations/versions/: c124f87d9065_created_users_table.py
src/meuprojfastapi/: meuapp.py  models.py  settings.py
tests/: conftest.py  test_db.py  test_meuapp.py
